- fixed sources for libraries - introduced information about extensions where addon is installed